--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
                 <li class="header__item"><a href="#">Контакты / Обо мне</a></li>
             </ul>
             <ul class="header__nav_mobile">
-                <li class="header__item"><a href="#">Картины</a></li>
-                <li class="header__item"><a href="#">Контакты / Обо мне</a></li>
+                <li class="header__item_mobile"><a href="#">Картины</a></li>
+                <li class="header__item_mobile"><a href="#">Контакты / Обо мне</a></li>
             </ul>
         </nav>
     </header>
