--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-    <header class="header container">
+    <header class="header">
         <div class="header__wrap">
             <div class="header__main-logo">
                 <a href="#">
@@ -41,10 +41,11 @@
             </ul>
         </nav>
     </header>
-    <main class="gallery__wrap container">
+    <main class="gallery__wrap">
         <div class="gallery">
             <div class="gallery__item">
                 <img src="/images/1.jfif" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
                         <h2 class="gallery__item-headline">Заголовок</h2>
@@ -57,29 +58,100 @@
             </div>
             <div class="gallery__item">
                 <img src="/images/2.jfif" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/3.jfif" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/4.jfif" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/5.jfif" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/6.jfif" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/7.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/8.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="gallery">
             <div class="gallery__item">
                 <img src="/images/9.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
                         <h2 class="gallery__item-headline">Заголовок</h2>
@@ -92,32 +164,113 @@
             </div>
             <div class="gallery__item">
                 <img src="/images/10.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/11.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/12.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/13.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/14.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/15.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/16.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/17.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
         </div>
         <div class="gallery">
             <div class="gallery__item">
                 <img src="/images/18.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
                         <h2 class="gallery__item-headline">Заголовок</h2>
@@ -130,12 +283,42 @@
             </div>
             <div class="gallery__item">
                 <img src="/images/19.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/20.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
             <div class="gallery__item">
                 <img src="/images/21.jpg" alt="Изображение">
+                <h2 class="gallery_item-headline_mobile">Заголовок</h2>
+                <div class="gallery__item-details">
+                    <div class="gallery__item-info">
+                        <h2 class="gallery__item-headline">Заголовок</h2>
+                        <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
