--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/main.css">
+
+    <script defer src="/main.js"></script>
 </head>
 
 <body>
@@ -322,7 +324,18 @@
             </div>
         </div>
     </main>
-    <footer>Footer</footer>
+    <footer class="footer">
+        <nav>
+            <ul id="footer-menu" class="footer__nav">
+                <li class="footer__item"><a href="#">Портреты</a></li>
+                <li class="footer__item"><a href="#">Пейзажи</a></li>
+                <li class="footer__item"><a href="#">Графика</a></li>
+                <li class="footer__item"><a href="#">Скульптуры</a></li>
+                <li class="footer__item"><a href="#">Настенная живопись</a></li>
+                <li class="footer__item"><a href="#">Обо мне 🎨</a></li>
+            </ul>
+        </nav>
+    </footer>
 </body>
 
 <svg style="display:none">
