--- a/about.html
+++ b/about.html
@@ -53,7 +53,8 @@
                 <div class="about__short-bio">
                     <h2 class="about__headline">Королёв Сергей Владимирович</h2>
                     <div class="about__short-text">
-                        <p>Сергей Владимирович Королев – живописец, камнерез, скульптор и график.</p>
+                        <p>Сергей Владимирович Королев – живописец, камнерез, скульптор и график.
+                        </p>
                         <p>Родился 10 сентября 1976 года в городе Чайковский.</p>
                         <p>Учился и работал в городе Чайковском.</p>
                         <p>С 2006- 2012 года проживал в городе Новосибирске.</p>
@@ -65,6 +66,83 @@
                         <p>Телефон: 8-900-000-00-00</p>
                         <p>ВК: https://vk.com/id333009378</p>
                         <p>Почта: Почта@яндекс</p>
+                    </div>
+                </div>
+            </div>
+            <div class="about__detailed-bio">
+                <div class="about__artist">
+                    <div class="about__artist-text">
+                        <p>Его детство прошло на природе среди живописных мест. Желание рисовать было с детства. Первые
+                            его
+                            творческие экзерсисы были нарисованы углем на печке. Он рисовал всегда, и если не было под
+                            рукой
+                            кисточки, использовал веточки от веника. А еще очень любил вырезать фигурки из дерева для
+                            местной ребятни. Возможности учиться в художественной школе у Сергея не было, до всего
+                            доходил
+                            самостоятельно. В школе его любовь к творчеству поддерживал учитель по труду. Позднее он
+                            многому
+                            научился у чайковского профессионального художника и педагога Алексея Ивановича Лимонова. И
+                            таким образом — самоучкой и любовью к творчеству было написано много картин в разных
+                            техниках:
+                            это была и живопись, и графика.
+                        </p>
+                        <p>Сергей склонен к философии, поэтому его графика очень философична и граничит с абстрактным
+                            восприятием мира. На его работах можно увидеть сказочных героев, полуфантастические города и
+                            пейзажи. Старая архитектура переплетается с фантастическими образами. В некоторых его
+                            полотнах смещаются и переплетаются временные границы. В них можно увидеть несколько пластов
+                            времени и образов, в которых художник старается отразить ключевой момент происходящих с ним
+                            событий. В то же время, среди его картин есть абсолютно реалистические работы.
+                        </p>
+                    </div>
+                    <div class="about__artist-image">
+                        <img src="/images/svg/about-image-1.svg" alt="Работа Сергея Королёва">
+                    </div>
+                </div>
+                <div class="about__artist">
+                    <div class="about__artist-image">
+                        <img src="/images/svg/about-image-2.svg" alt="Работа Сергея Королёва">
+                    </div>
+                    <div class="about__artist-text">
+                        <p>Сергей постоянно находится в движении, в творческом поиске. Он ищет себя, новые темы и
+                            сюжеты, повышает уровень мастерства, участвует в выставках. Часто выставки Сергея становятся
+                            открытием для посетителей. Так было и в его родном городе Чайковске. Так было и в
+                            Новосибирске, где состоялись персональные выставки Сергея на разных выставочных площадках: в
+                            Новосибирском краеведческом музее, в арт-кафе "Бродячая собака", в выставочном зале
+                            Новосибирской государственной архитектурно-художественной академии, в фойе театра "Глобус".
+                        </p>
+                        <p>Коллекция графики "В глубине веков" составлена из работ, навеянных этнографическими
+                            впечатлениями. Графика, представленная на выставке, философична и многогранна. Здесь можно
+                            увидеть сказочных героев, полуфантастические города и пейзажи. В некоторых полотнах
+                            смещаются и переплетаются временные границы. В них проявляется несколько пластов времени и
+                            образов, в которых художник старается отразить ключевой момент происходящих с ним событий.
+                        </p>
+                        <p>В 2015 году в городе появилась новая деревянная скульптурная группа «Русские богатыри»: три
+                            богатыря, вещий камень, три дорожки, ведущие от него к богатырям, небольшой частокол и
+                            клумба – около кинотеатра «Кама» - торец дома по К. Маркса, 31. Художественная композиция
+                            выполнена Королёвым к 55-летию этого двора по заказу депутата Чайковской городской думы
+                            Андрея Филатова.
+                        </p>
+                    </div>
+                </div>
+                <div class="about__artist">
+                    <div class="about__artist-text">
+                        <p>Сотрудничество Андрея Филатова и Сергея Королева привело к созданию композиции «Воспоминание
+                            о Петре Ильиче Чайковском» у ресторана по ул. Мира, 7.
+                        </p>
+                        <p>Он автор скульптурных групп в нашем городе: перед детским кафе «Бонифаций» - Лев, его бабушка
+                            и негритянка, около кафе «Кулинария» в Завокзальном – «Маша и медведь», на Уральской перед
+                            кафе «Прага» - «Бравый солдат Швейк». Участвовал в оформлении базы отдыха «Раздолье»и
+                            Чайковского парка культуры и отдыха.
+                        </p>
+                        <p>
+                            Сергей Королев не профессиональный художник, но в нем счастливо сочетаются самобытное
+                            художественное мастерство, искренний интерес к истории и современности, детская
+                            непосредственность и философская глубина в восприятии мира. Что делает его творчество живым,
+                            профессиональным и многогранным.
+                        </p>
+                    </div>
+                    <div class="about__artist-image">
+                        <img src="/images/svg/about-image-3.svg" alt="Работа Сергея Королёва">
                     </div>
                 </div>
             </div>
