--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/reset.css">
     <link rel="stylesheet" href="/main.css">
 
+    <script defer src="/medium-zoom.min.js"></script>
     <script defer src="/main.js"></script>
 </head>
 
