--- a/about.html
+++ b/about.html
@@ -28,17 +28,19 @@
                 <a href="#">Обо мне</a>
             </h1>
         </div>
-        <nav>
-            <ul class="header__nav">
-                <li class="header__item header__item_active"><a href="#">Главная</a></li>
+        <nav class="header__nav">
+            <ul class="header__items">
+                <li class="header__item"><a href="#">Главная</a></li>
                 <li class="header__item"><a href="#">Портреты</a></li>
                 <li class="header__item"><a href="#">Пейзажи</a></li>
                 <li class="header__item"><a href="#">Графика</a></li>
                 <li class="header__item"><a href="#">Скульптуры</a></li>
                 <li class="header__item"><a href="#">Настенная живопись</a></li>
-                <li class="header__item"><a href="#">Контакты / Обо мне</a></li>
+                <li class="header__item header__item_active"><a href="#">Контакты / Обо мне</a></li>
             </ul>
-            <ul class="header__nav_mobile">
+        </nav>
+        <nav class="header__nav_mobile">
+            <ul>
                 <li class="header__item_mobile"><a href="#">Картины</a></li>
                 <li class="header__item_mobile"><a href="#">Контакты / Обо мне</a></li>
             </ul>
@@ -98,7 +100,7 @@
                         <img src="/images/svg/about-image-1.svg" alt="Работа Сергея Королёва">
                     </div>
                 </div>
-                <div class="about__artist">
+                <div class="about__artist about__artist_mobile">
                     <div class="about__artist-image">
                         <img src="/images/svg/about-image-2.svg" alt="Работа Сергея Королёва">
                     </div>
@@ -149,8 +151,8 @@
         </article>
     </main>
     <footer class="footer">
-        <nav>
-            <ul id="footer-menu" class="footer__nav">
+        <nav class="footer__nav">
+            <ul id="footer-menu" class="footer__items">
                 <li class="footer__item"><a href="#">Портреты</a></li>
                 <li class="footer__item"><a href="#">Пейзажи</a></li>
                 <li class="footer__item"><a href="#">Графика</a></li>
