--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                 <a href="#">Королёв Сергей - Художник, скульптор</a>
             </h1>
         </div>
-        <nav>
-            <ul class="header__nav">
+        <nav class="header__nav">
+            <ul class="header__items">
                 <li class="header__item header__item_active"><a href="#">Главная</a></li>
                 <li class="header__item"><a href="#">Портреты</a></li>
                 <li class="header__item"><a href="#">Пейзажи</a></li>
@@ -38,7 +38,9 @@
                 <li class="header__item"><a href="#">Настенная живопись</a></li>
                 <li class="header__item"><a href="#">Контакты / Обо мне</a></li>
             </ul>
-            <ul class="header__nav_mobile">
+        </nav>
+        <nav class="header__nav_mobile">
+            <ul>
                 <li class="header__item_mobile"><a href="#">Картины</a></li>
                 <li class="header__item_mobile"><a href="#">Контакты / Обо мне</a></li>
             </ul>
@@ -265,6 +267,11 @@
                         <p class="gallery__item-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. A
                             saepe
                             illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
+                            Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!
+
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. A
+                            saepe
+                            illo, consectetur, voluptatum accusamus ipsum odio eos officiis culpa, harum perferendis.
                             Quisquam in possimus maiores recusandae cum dignissimos nulla culpa!</p>
                     </div>
                 </div>
@@ -326,8 +333,8 @@
         </div>
     </main>
     <footer class="footer">
-        <nav>
-            <ul id="footer-menu" class="footer__nav">
+        <nav class="footer__nav">
+            <ul id="footer-menu" class="footer__items">
                 <li class="footer__item"><a href="#">Портреты</a></li>
                 <li class="footer__item"><a href="#">Пейзажи</a></li>
                 <li class="footer__item"><a href="#">Графика</a></li>
