--- a/index.html
+++ b/index.html
@@ -39,10 +39,22 @@
                 <li class="header__item"><a href="#">Контакты / Обо мне</a></li>
             </ul>
         </nav>
-        <nav class="header__nav_mobile">
+        <nav class="header__nav-mobile">
             <ul>
-                <li class="header__item_mobile"><a href="#">Картины</a></li>
-                <li class="header__item_mobile"><a href="#">Контакты / Обо мне</a></li>
+                <li class="header__item-mobile nav-group"><a href="#">Картины</a></li>
+                <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
+                        href="#">Главная</a></li>
+                <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
+                        href="#">Портреты</a></li>
+                <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
+                        href="#">Пейзажи</a></li>
+                <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
+                        href="#">Графика</a></li>
+                <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
+                        href="#">Скульптуры</a></li>
+                <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
+                        href="#">Настенная живопись</a></li>
+                <li class="header__item-mobile"><a href="#">Контакты / Обо мне</a></li>
             </ul>
         </nav>
     </header>
