--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
         </nav>
         <nav class="header__nav-mobile">
             <ul>
-                <li class="header__item-mobile nav-group"><a href="#">Картины</a></li>
+                <li class="header__item-mobile header__item-group-mobile"><a href="#">Картины</a></li>
                 <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
                         href="#">Главная</a></li>
                 <li class="header__item-mobile header__item-mobile_active header__item-mobile_hidden"><a
@@ -164,7 +164,7 @@
     </main>
     <footer class="footer">
         <nav class="footer__nav">
-            <ul id="footer-menu" class="footer__items">
+            <ul class="footer__items">
                 <li class="footer__item"><a href="#">Портреты</a></li>
                 <li class="footer__item"><a href="#">Пейзажи</a></li>
                 <li class="footer__item"><a href="#">Графика</a></li>
