--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Королёв Сергей - Личный сайт</title>
 
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="main.css">
 
-    <script defer src="/medium-zoom.min.js"></script>
-    <script defer src="/main.js"></script>
+    <script defer src="medium-zoom.min.js"></script>
+    <script defer src="main.js"></script>
 </head>
 
 <body>
