Fix-images-for-github-pages

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <li class="header__item"><a href="#">Графика</a></li>
                 <li class="header__item"><a href="#">Скульптуры</a></li>
                 <li class="header__item"><a href="#">Настенная живопись</a></li>
-                <li class="header__item"><a href="#">Контакты / Обо мне</a></li>
+                <li class="header__item"><a href="about.html">Контакты / Обо мне</a></li>
             </ul>
         </nav>
         <nav class="header__nav-mobile">
@@ -61,7 +61,7 @@
     <main class="gallery__wrap">
         <div class="gallery">
             <div class="gallery__item">
-                <img src="/images/1.jfif" alt="Изображение">
+                <img src="images/1.jfif" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -74,7 +74,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/2.jfif" alt="Изображение">
+                <img src="images/2.jfif" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/3.jfif" alt="Изображение">
+                <img src="images/3.jfif" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -100,7 +100,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/4.jfif" alt="Изображение">
+                <img src="images/4.jfif" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -113,7 +113,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/5.jfif" alt="Изображение">
+                <img src="images/5.jfif" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -126,7 +126,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/6.jfif" alt="Изображение">
+                <img src="images/6.jfif" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -139,7 +139,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/7.jpg" alt="Изображение">
+                <img src="images/7.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -152,7 +152,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/8.jpg" alt="Изображение">
+                <img src="images/8.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -167,7 +167,7 @@
         </div>
         <div class="gallery">
             <div class="gallery__item">
-                <img src="/images/9.jpg" alt="Изображение">
+                <img src="images/9.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -180,7 +180,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/10.jpg" alt="Изображение">
+                <img src="images/10.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -193,7 +193,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/11.jpg" alt="Изображение">
+                <img src="images/11.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -206,7 +206,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/12.jpg" alt="Изображение">
+                <img src="images/12.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -219,7 +219,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/13.jpg" alt="Изображение">
+                <img src="images/13.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -232,7 +232,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/14.jpg" alt="Изображение">
+                <img src="images/14.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -245,7 +245,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/15.jpg" alt="Изображение">
+                <img src="images/15.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -258,7 +258,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/16.jpg" alt="Изображение">
+                <img src="images/16.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -271,7 +271,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/17.jpg" alt="Изображение">
+                <img src="images/17.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -291,7 +291,7 @@
         </div>
         <div class="gallery">
             <div class="gallery__item">
-                <img src="/images/18.jpg" alt="Изображение">
+                <img src="images/18.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -304,7 +304,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/19.jpg" alt="Изображение">
+                <img src="images/19.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -317,7 +317,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/20.jpg" alt="Изображение">
+                <img src="images/20.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
@@ -330,7 +330,7 @@
                 </div>
             </div>
             <div class="gallery__item">
-                <img src="/images/21.jpg" alt="Изображение">
+                <img src="images/21.jpg" alt="Изображение">
                 <h2 class="gallery_item-headline_mobile">Заголовок</h2>
                 <div class="gallery__item-details">
                     <div class="gallery__item-info">
