Fix-for-github-pages

--- a/about.html
+++ b/about.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Королёв Сергей - Личный сайт</title>
 
-    <link rel="stylesheet" href="/reset.css">
-    <link rel="stylesheet" href="/main.css">
-    <link rel="stylesheet" href="/about.css">
+    <link rel="stylesheet" href="reset.css">
+    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="about.css">
 
-    <script defer src="/main.js"></script>
+    <script defer src="main.js"></script>
 </head>
 
 <body>
@@ -109,12 +109,12 @@
                         </p>
                     </div>
                     <div class="about__artist-image">
-                        <img src="/images/svg/about-image-1.svg" alt="Работа Сергея Королёва">
+                        <img src="images/svg/about-image-1.svg" alt="Работа Сергея Королёва">
                     </div>
                 </div>
                 <div class="about__artist about__artist_mobile">
                     <div class="about__artist-image">
-                        <img src="/images/svg/about-image-2.svg" alt="Работа Сергея Королёва">
+                        <img src="images/svg/about-image-2.svg" alt="Работа Сергея Королёва">
                     </div>
                     <div class="about__artist-text">
                         <p>Сергей постоянно находится в движении, в творческом поиске. Он ищет себя, новые темы и
@@ -156,7 +156,7 @@
                         </p>
                     </div>
                     <div class="about__artist-image">
-                        <img src="/images/svg/about-image-3.svg" alt="Работа Сергея Королёва">
+                        <img src="images/svg/about-image-3.svg" alt="Работа Сергея Королёва">
                     </div>
                 </div>
             </div>
